# agentX

./: .gitignore  .pre-commit-config.yaml  AGENTX.md  README.md  pyproject.toml
.agentx/: config.toml
.amh/: handoff.json
docs/: BORROW-FROM-PI.md  CAPABILITY_ROADMAP_2026-05-25.md  CLI_DISPATCH_REFACTOR_HANDOFF.md  CLI_JSON_CONTRACTS.md  CODEX-MT22-DIFF-SUMMARY.md  CODEX-REVIEW-MT21-Task-List.md  CODEX-REVIEW-MT22-Dual-Task-Unification.md  CODEX-REVIEW-TSUMU-ARCH-2026-06.md  HEADLESS_OPTIMIZATION_LIST.md  HEADLESS_PAYLOAD_CONTRACT.md  MT22-Legacy-Removal-Checklist.md  MT22-Migration-Guide.md  MT22-v0.3.0-Handover.md  NEXT_SESSION.md  OBJECTIVE_GAP_AUDIT_2026-07-15.md  OBJECTIVE_STATUS.md  OPTIMIZATION_ROADMAP.md  RESOURCE_MAPS.md  VISION_80_GAP_ANALYSIS.md  agentX-vs-seven-agent.md  llamacpp-usage.md  product-tour.md
scripts/: check-lockfile-commit.py  check-pinned-deps.py  check_no_legacy_task.py  fidelity_probe.py  gemma4_reliability_benchmark.py  simple_crawler.py  verify_task_list_persistence.py
tests/: helpers.py  test_ace_cli.py  test_agent_session.py  test_approval.py  test_approvals_cli.py  test_artifacts_cli.py  test_attachments.py  test_bootstrap.py  test_capabilities_cli.py  test_cli_dispatch.py  test_cli_runtime_handlers.py  test_command_catalog_cli.py  test_command_parity_cli.py  test_command_plan_cli.py  test_commit_plan_cli.py  test_config_cli.py  test_context_compactor.py  test_coordinator.py  test_diff_cli.py  test_doctor.py  test_doctor_cli.py  test_dynamic_prompt.py  test_error_classifier.py  test_fidelity.py  test_gate_cli.py  test_guide.py  (+48 more)
(+63 files in other folders)
