[project]
name = "agentx"
version = "0.1.0"
description = "Local Ollama agent shell with Memory Hall and guarded tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx==0.28.1",
    "prompt-toolkit==3.0.52",
    "pypdf==6.11.0",
    "pydantic==2.13.4",
    "rich==15.0.0",
    "typer==0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "ruff==0.15.13",
]

[project.scripts]
agentx = "agentx.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentx"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
